src/tests/testfiles/function-calls/3.txt
testfiles/function-calls/3.c:6:5: error: expected 'float' but argument is of type 'int'
f(0);
  ^
